- fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@ html, body, #root {
 	width: 100%;
 	height: 100%;
 	background-color: #ecf0f1;
+	overflow: hidden;
 }
 
 .container {
